platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_104.platter
start() {
  a[0 = 1;
}
